# Tuna.ai

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pytest.ini
agents/: pyproject.toml
agents/tests/: test_day1.py
agents/tuna_agents/: __init__.py  deploy.py  root.py  settings.py  smoke.py
agents/tuna_agents/prompts/: __init__.py
agents/tuna_agents/schemas/: __init__.py  intent.py
agents/tuna_agents/tools/: __init__.py
backend/: Dockerfile  requirements.txt
backend/agents/destination_scout/: tools.py
backend/agents/orchestrator/: agent.py
backend/api/: main.py
backend/tests/: test_api.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/src/app/api/chat/: route.test.ts  route.ts
frontend/src/app/api/runtime-config/: route.test.ts  route.ts
frontend/src/app/app/: page.tsx
frontend/src/components/chat/: CompanionChat.test.tsx  CompanionChat.tsx
frontend/src/components/map/: MapView.test.tsx  MapView.tsx
frontend/src/components/partnerships/: PartnershipDashboard.tsx
infra/sql/migrations/: 0001_extensions.sql  0002_schema.sql
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
monitor-worker/: README.md
scripts/: bootstrap.sh  deploy_agent.sh  deploy_backend.sh  deploy_web.sh
web/: Dockerfile  next.config.mjs  package.json
web/app/: globals.css  layout.tsx  page.tsx
