[project]
name = "tuna-agents"
version = "0.1.0"
description = "Tuna's school of travel agents — Scout, Navigator, Compass, Pilot, Currents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "google-adk>=1.0.0",
  "google-cloud-aiplatform>=1.71.0",
  "google-genai>=0.8.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.0",
  "psycopg[binary,pool]>=3.2.0",
  "pgvector>=0.3.0",
  "asyncpg>=0.29.0",
  "google-cloud-secret-manager>=2.20.0",
  "google-cloud-pubsub>=2.23.0",
  "google-cloud-storage>=2.18.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tuna_agents*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
